EV-162 - finish tag badges, update texts, responsive tabs nav, fix spacings

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -77,6 +77,9 @@ $headings-font-sizes: (
     h6 : 1rem,
 );
 
+$link-color: $primary-color;
+$nav-link-color: $primary-color;
+
 
 // bootstrap override
 $custom-theme-colors: (
@@ -147,6 +150,9 @@ $nav-tabs-link-hover-border-color:	$primary-color $primary-color $nav-tabs-borde
 $nav-tabs-link-active-color: $primary-color;
 $nav-tabs-link-active-bg: white;
 $nav-tabs-link-active-border-color:	$primary-color $primary-color $nav-tabs-link-active-bg;
+
+$nav-pills-link-active-bg: $primary-color;
+$nav-pills-link-active-color : white;
 
 
 @keyframes float {
